--- a/activities.html
+++ b/activities.html
@@ -29,7 +29,7 @@
                 <a href="downloadableFILES/activities.zip/" download>Download Project Folder</a> <br><hr>
                 <a href="activitiesf2f/f2f activities.zip/" download>Download F2F Project Folder</a>
 
-                <p>If the download link is not working, please go to this <a href="https://github.com/LaurestaVinceJadePoblete/VINCE.git">alternative link</a>.</p>
+                <p>If the download link is not working, please go to this <a href="https://github.com/LaurestaVinceJadePoblete/VINCE.git">CLICK THIS LINK</a>.</p>
 
             </ul>
         </div>
